<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/txtSingUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="51dp"
        android:text="@string/singup_here"
        android:textSize="20sp"
        android:textColor="@color/colorAccent"/>

    <EditText
        android:id="@+id/editName"
        android:layout_width="match_parent"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/txtSingUp"
        android:layout_marginTop="100dp"
        android:ems="10"
        android:inputType="textNoSuggestions"
        android:hint="@string/enter_your_name" />

    <EditText
        android:id="@+id/editMobileNo"
        android:layout_width="match_parent"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/editName"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="textNoSuggestions"
        android:hint="@string/enter_your_mobile_number" />

    <EditText
        android:id="@+id/editPassword"
        android:layout_width="match_parent"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/editMobileNo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/enter_your_password"
        android:inputType="textPassword"/>

    <Button
        android:id="@+id/btnSingUp"
        android:layout_width="match_parent"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/editPassword"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/round_btn"
        android:text="@string/singup"
        android:textAllCaps="false"
        android:textColor="@color/colorWhite"
        android:textSize="20sp" />

</RelativeLayout>