<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChangePassword">

    <TextView
        android:id="@+id/textChangePassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:textSize="20sp"
        android:textColor="@color/colorAccent"
        android:text="@string/change_password" />

    <EditText
        android:id="@+id/editOldPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/textChangePassword"
        android:layout_marginTop="50dp"
        android:layout_marginRight="15dp"
        android:layout_marginLeft="15dp"
        android:ems="10"
        android:inputType="textNoSuggestions"
        android:hint="@string/your_old_password" />

    <EditText
        android:id="@+id/editNewPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/editOldPassword"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:layout_marginRight="15dp"
        android:layout_marginLeft="15dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/your_new_password" />

    <EditText
        android:id="@+id/editNewPasswordMatch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/editNewPassword"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:layout_marginRight="15dp"
        android:layout_marginLeft="15dp"
        android:ems="10"
        android:inputType="textNoSuggestions"
        android:hint="@string/your_new_password_type_again" />

    <Button
        android:id="@+id/btnChangePassword"
        android:layout_width="match_parent"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/editNewPasswordMatch"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/round_btn"
        android:text="Change Password"
        android:textAllCaps="false"
        android:textColor="@color/colorWhite"
        android:textSize="20sp" />

</RelativeLayout>